Fix forms on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -736,10 +736,6 @@ footer > ul > li {
 
 /* region Forms */
 
-form {
-    min-width: 32rem;
-}
-
 form > div,
 form > input {
     display: flex;
